--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/config-conventional": "^15.0.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "eslint": "^8.4.1",
@@ -45,6 +46,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "nuxt-gsap-module": "^1.7.0",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
