--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
+    "gsap": "npm:@gsap/shockingly@^3.10.4",
     "nuxt": "^2.15.8",
+    "nuxt-gsap-module": "^1.7.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
