--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
-    "stylelint-config-standard": "^24.0.0"
+    "stylelint-config-standard": "^24.0.0",
+    "vue-masonry-css": "^1.0.3"
   }
 }
