--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gsap": "npm:@gsap/shockingly@^3.10.4",
     "nuxt": "^2.15.8",
     "nuxt-gsap-module": "^1.7.0",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -56,6 +57,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "vue-masonry-css": "^1.0.3"
+    "vue-masonry-css": "^1.0.3",
+    "vue-particles": "^1.0.9"
   }
 }
