--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
   },
   "dependencies": {
     "@mdi/js": "^6.6.96",
-    "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
-    "gsap": "npm:@gsap/shockingly@^3.10.4",
+    "gsap": "npm:@gsap/shockingly@^3.11.1",
     "nuxt": "^2.15.8",
     "nuxt-gsap-module": "^1.7.0",
     "vee-validate": "^3.4.14",
@@ -50,14 +49,12 @@
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
-    "nuxt-animejs": "^1.2.3",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard": "^24.0.0",
-    "vue-masonry-css": "^1.0.3",
-    "vue-particles": "^1.0.9"
+    "vue-masonry-css": "^1.0.3"
   }
 }
