--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.19.3",
     "gsap": "npm:@gsap/shockingly@^3.11.1",
+    "moment": "^2.29.4",
     "nuxt": "^2.15.8",
     "nuxt-gsap-module": "^1.7.0",
     "vee-validate": "^3.4.14",
